--- a/project_content/project_details/project_detail07.html
+++ b/project_content/project_details/project_detail07.html
@@ -18,8 +18,9 @@
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">Notion API</div>
-      <div class="detail-slider__text">Notion API를 사용했습니다. 노션의 데이터 베이스를 사용하여 내용을 추가하고 삭제시에 더 편하게 할 수 있습니다.
+      <div class="detail-slider__title">Next.js</div>
+      <div class="detail-slider__text">
+        SSR(서버 사이드 렌더링)으로 구현할 수 있는 Next.js 프레임워크를 사용하여 웹을 제작하였습니다. React는 Next.js 와 달리 CSR(클라이언트 사이드 렌더링) 방식이 아니라 SEO 최적화에 불리한 측면이 있습니다. 그리고 사이트 내용이 많고 그 안에서 내용을 쉽게 찾기 위해선 리액트보다는 Next.js를 활용하는 것이 더 좋다고 판단하였습니다.
       </div>
     </div>
   </div>
@@ -30,8 +31,10 @@
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">filter를 사용한 분류</div>
-      <div class="detail-slider__text">map과 filter를 사용하여 사용자가 버튼을 누르면 해당 태그의 게시물만 보여질 수 있도록 했습니다.</div>
+      <div class="detail-slider__title">Notion API</div>
+      <div class="detail-slider__text">
+        오성노트의 데이터는 Notion API를 사용했습니다. 노션의 데이터 베이스를 사용하여 내용을 추가하고 삭제시에 더 편하게 할 수 있습니다. map과 filter를 사용하여 사용자가 버튼을 누르면 해당 태그의 게시물만 보여질 수 있도록 했습니다.
+      </div>
     </div>
   </div>
   
