--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="running_start_wrapper"> 
           <div class="start_osung">
-            <img src="/images/main/run_start-01.png" alt="스타트 이미지"/>
+            <img src="/images/main/run_start-01.webp" alt="스타트 이미지"/>
           </div>
         </div>
       </div>
