project_overview_wrapper class transition

--- a/project_content/project_overview03.html
+++ b/project_content/project_overview03.html
@@ -1,4 +1,4 @@
-<div>
+<div class="project_overview_wrapper">
   <div class="project_main_pic">
     <img src="/images/project-03-main.webp" alt="동의보감 한의원 메인 사진" />
     <p class="click_me">click to see more details</p>
