--- a/project_content/project_overview05.html
+++ b/project_content/project_overview05.html
@@ -1,4 +1,4 @@
-<div>
+<div class="project_overview_wrapper">
   <div class="project_main_pic">
     <img src="/images/project-05-main.webp" alt="운동 루틴 메인 사진" />
     <p class="click_me">click to see more details</p>
