--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -1,4 +1,4 @@
-<div>
+<div class="project_overview_wrapper">
   <div class="project_main_pic">
     <img src="/images/project-06-main.webp" alt="포트폴리오 메인 사진" />
     <p class="click_me">click to see more details</p>
