--- a/project_content/project_overview07.html
+++ b/project_content/project_overview07.html
@@ -1,4 +1,4 @@
-<div>
+<div class="project_overview_wrapper">
   <div class="project_main_pic">
     <img src="/images/project-07-main.webp" alt="오성노트 메인 사진" />
     <p class="click_me">click to see more details</p>
