remove running osung

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           <div class="me"></div>
         </div>
         <div class="title">
-          <p class="t_ready rsg">READY</p>
+          <!-- <p class="t_ready rsg">READY</p>
           <p class="t_set rsg">SET</p>
-          <p class="t_go rsg">GO!</p>
+          <p class="t_go rsg">GO!</p> -->
           <p class="t_title">OSUNG<br/>JIHYUN</p>
         </div>
         <div class="bg_blues">
